@@ -1,9 +1,15 @@
+2013-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* NEWS: 2.0.3 release.
+	* twitter/getauthtoken.py: Updated Twitter OAuth URLs (issue #16).
+	  Thanks @gion_XY & @Sururu_s2!
+
 2013-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* tumblr/entry.py: Removed depends on 'image' template.
 	* updatewindow.py, update.glade: Added new short cut keys framework.
 
-2012-12-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp> 
+2012-12-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* output.py: Added checking for duplicated posts.
 
